# Vishwakarma_awards

./: LICENSE
install/arm_vla_pkg/share/arm_vla_pkg/: package.xml
install/arm_vla_pkg/share/arm_vla_pkg/launch/: vla_main.launch.py
log/: latest_build
modelfiles/: arm_brain.modelfile
nodes/: action_node.py  brain_node.py  test_visual_servoing.py  visual_servoing_calibration.py  visual_servoing_node.py
src/: readme.md
src/akabot_bringup/src/: I2CPeripheral.cpp  pca9685_comm.cpp  pca9685_system.cpp
src/akabot_control/: setup.py
src/akabot_control/akabot_control/: publish_tf.py  trajectory_planner.py
src/akabot_control/launch/: final_arm.launch.py  test_camera.launch.py  vision_pick_place.launch.py
src/akabot_description/urdf/: akabot.urdf.xacro  akabot_core.xacro  akabot_gz.urdf.xacro  end_effector_camera.xacro
src/akabot_moveit_config/config/: kinematics.yaml
src/arm_vla_pkg/: setup.cfg  setup.py
src/arm_vla_pkg/launch/: vla_main.launch.py  way_point.launch.py
src/bot_control/: package.xml  setup.py
src/bot_control/bot_control/: bot_controller.py  interactive_control.py  scanning_vision_pick_place.py
src/bot_control/config/: controller_params.yaml
src/bot_control/launch/: dual_camera.launch.py  final_arm.launch.py  gazebo_control.launch.py  scanning_vision_pick_place.launch.py  system.launch.py  vision_pick_place.launch.py
src/bot_description/: CMakeLists.txt
src/bot_description/config/: initial_positions.yaml
src/bot_gazebo/: CMakeLists.txt
src/bot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+91 files in other folders)
